kubernetes/smart-home/zigbee2mqtt/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zigbee2mqtt
  namespace: smart-home
  labels:
    app: zigbee2mqtt
spec:
  replicas: 1
  serviceName: zigbee2mqtt
  selector:
    matchLabels:
      app: zigbee2mqtt
  template:
    metadata:
      labels:
        app: zigbee2mqtt
    spec:
      automountServiceAccountToken: false
      containers:
        - name: zigbee2mqtt
          image: koenkk/zigbee2mqtt:1.42.0
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
          resources:
            limits:
              cpu: 1500m
              memory: 2Gi
              ephemeral-storage: 1Gi
            requests:
              cpu: 100m
              memory: 256Mi
              ephemeral-storage: 1Gi
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: zigbee2mqtt-data
              mountPath: /app/data
            #- name: zigbee2mqtt-config
              #  mountPath: /app/data/configuration.yaml
              #  subPath: configuration.yaml
            - name: z2m-cert
              mountPath: /app/certs
              readOnly: true
      volumes:
        - name: z2m-cert
          secret:
            secretName: z2m-cert
        - name: zigbee2mqtt-config
          configMap:
            name: zigbee2mqtt-config
  volumeClaimTemplates:
    - metadata:
        name: zigbee2mqtt-data
      spec:
        accessModes:
          - "ReadWriteOnce"
        storageClassName: "longhorn"
        resources:
          requests:
            storage: 256Mi
