kubernetes/smart-home/zigbee2mqtt/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zigbee2mqtt
  namespace: smart-home
  labels:
    app: zigbee2mqtt
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/server-snippet: |
      proxy_set_header Upgrade "websocket";
      proxy_set_header Connection "Upgrade";
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - &hostName z2m.mcmumf.dev
      secretName: z2m.mcmumf.dev-tls
  rules:
    - host: *hostName
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zigbee2mqtt
                port:
                  number: 8080
